--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="game-container">
+    <div class="score">
+      <h1>Player: <span class="playerScore">0</span></h1>
+      <h1>Computer: <span class="computerScore">0</span></h1>
+    </div>
+    <div class="game-buttons">
+      <button class="rock">rock</button>
+      <button class="paper">paper</button>
+      <button class="scissors">scissors</button>
+    </div>
+    <div class="results"></div>
+    <div class="play-again">
+      <h1 class="final-score"></h1>
+      <button style="display: none" class="play-again-button">Play again</button>
+    </div>
+  </div>
   <script src="./index.js"></script>
 </body>
 </html>
